# vietlott-data-research

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  update-dataset.yml  update-fast.yml  update-scheduled.yml  update-weather.yml
datasets/: exclusions.csv  prize_rules.csv
datasets/metadata/: dataset-summary.json  quality-report.json  snapshot-manifest.json
datasets/weather/: daily.csv  metadata.json
docs/: ARCHITECTURE.md  AUDIT_EFFECT_THRESHOLDS.md  AUDIT_KENO_PAIR_COOCCURRENCE.md  AUDIT_PERMUTATION_CHECKS.md  AUDIT_SOURCE_BREAKDOWN.md  BACKTEST_MULTIPLE_TESTING.md  BACKTEST_SCORE_FORMULAS.md  BACKTEST_WINDOW_SENSITIVITY.md  METHODOLOGY_CHANGELOG.md  NGHIEN_CUU.md  SOURCE_SURVEY.md  THU_THAP_DU_LIEU.md  TODO_NGHIEN_CUU.md  TU_DONG_CAP_NHAT.md
docs/tro-choi/: README.md  co-hoc.md  dien-tu.md
predictions/: ledger.jsonl
scripts/: watch_backfill.ps1
site/: du-lieu.html  index.html  phuong-phap.html
site/assets/: app.js  docs.js  styles.css
site/data/: analysis-export.json  audit-log.jsonl  audit-summary.json  dataset-quality.json  manifest.json  predictions.json  snapshot-manifest.json
src/vietlott_analytics/: builder.py  fairness.py  io.py  predictions.py  weather.py
src/vietlott_collector/: __init__.py  audit.py  cli.py  (+17 more)
tests/: test_analytics_io.py  test_documentation.py  test_fairness_audit.py  test_keno_full_history.py  test_parsers.py  test_prediction_ledger.py  test_repository_data.py  test_source_payloads.py  test_state_and_storage.py  test_static_site.py  test_weather_update.py
(+139 files in other folders)
